# architecture

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  PythonArchitecture.md  README.MD  RestConventional.md  Technologies.md  index.html  main.py  mkdocs.yml  pyproject.toml  rest_conventional.md  sitemap.xml
.github/workflows/: deploy.yml
Architecture/: FrontendArchitecture.md  PythonArchitecture.md
_theme/: style.css
docs/: .nav.yml  index.md
docs/Архитектура/: Великолепные технологии.md  Соглашения об именах REST API.md
docs/Архитектура/Системная архитектура/: Архитектура приложений на Python (FastAPI).md  Архитектура фронтенд приложений на платформе NextJS.md
search/: search_index.json
Архитектура/Великолепные технологии/: index.html
Архитектура/Системная архитектура/Архитектура приложений на GoLang/: index.html
Архитектура/Системная архитектура/Архитектура приложений на Python (FastAPI)/: index.html
Архитектура/Системная архитектура/Архитектура фронтенд приложений на платформе NextJS/: index.html
Архитектура/Соглашения об именах REST API/: index.html
